--- a/GithubRepository/app/src/main/res/values/strings.xml
+++ b/GithubRepository/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
     <string name="app_name">GithubRepository</string>
+    <string name="loading_projects">Loading projects …</string>
+    <string name="project_name">Title</string>
+    <string name="github_projects">Your GitHub Projects!!</string>
+    <string name="project_list">Project List</string>
+    <string name="languages">Programming Language: %s</string>
+    <string name="watchers">Watchers: %s</string>
+    <string name="openIssues">Open Issues: %s</string>
+    <string name="created_at">Created Time: %s</string>
+    <string name="updated_at">Last Updated Time: %s</string>
+    <string name="clone_url">Clone URL: %s</string>
+    <string name="project_language">Project Language</string>
+    <string name="project_watchers">Project Watchers</string>
+    <string name="project_description">Project Description</string>
+    <string name="open_issues">Open Issues</string>
+    <string name="loading_project">Loading Project …</string>
+    <string name="github_user_name">UmutSERIFLER</string>
 </resources>
